--- a/styles.scss
+++ b/styles.scss
@@ -2,3 +2,6 @@
 @import "./caja-pokemon";
 @import "./datos-del-pokemon";
 @import "./tipo-pokemon";
+
+//Stilo para el HTML de MEW
+@import "./style-MEW"
