--- a/_TODO.scss
+++ b/_TODO.scss
@@ -5,5 +5,48 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
+    background-color: #495057;
     
+}
+
+.imagen-movimiento {
+    width: 250px;
+    height: 157px;
+    position: absolute;
+    left: 100px;
+    bottom: 100px;
+    animation: move 10s linear 0s infinite normal;
+    border-style: none;
+}
+
+@keyframes move {
+    0%{
+        left: 100px;
+        bottom: 100px;
+        opacity: 1;
+    }
+    20%{
+        left: 300px;
+        bottom: 300px;
+        opacity: 0;
+    }
+    40%{
+        left: 500px;
+        bottom: 500px;
+        opacity: 1;
+    }
+    60%{
+        left: 800px;
+        bottom: 300px;
+        opacity: 0;
+    }
+    80%{
+        left: 1200px;
+        bottom: 100px;
+        opacity: 1;
+    }
+    100%{
+        left: 800px;
+        bottom: -200px;
+    }
 }
