--- a/_caja-pokemon.scss
+++ b/_caja-pokemon.scss
@@ -1,9 +1,18 @@
 /*AQUI VA TODO EL DISEÑO DE LA CAJA DE LOS POKEMONS, EL DISEÑO DE CADA CAJA INDIVIDUAL*/
-.caja-pokemon {
-    background-color:aquamarine;
+.caja-pokemon  {
+    
     width: 300px;
+    height: 220px;
     margin: 10px;
     display: block;
     flex-direction: row;
     position: relative;
+    border: 1px;
+    border-style: solid;
+    border-color: black;
+    background-color: #dee2ff;
+    border-radius: 100%;
+    box-shadow: 0px 0px 15px 15px #ec731e;
+        
 }
+
