--- a/_tipo-pokemon.scss
+++ b/_tipo-pokemon.scss
@@ -11,6 +11,11 @@
     text-transform: none;
     font-size: 11px;
     text-align: center;
+    margin-left: 30%;
+    margin-bottom: 3px;
+    border: 1px;
+    border-style: solid;
+    border-color: #495057;
 }
 
 .tipo-fire {
@@ -25,6 +30,11 @@
     text-transform: none;
     font-size: 11px;
     text-align: center;
+    margin-left: 30%;
+    margin-bottom: 3px;
+    border: 1px;
+    border-style: solid;
+    border-color: #495057;
 }
 
 .tipo-water {
@@ -39,6 +49,11 @@
     text-transform: none;
     font-size: 11px;
     text-align: center;
+    margin-left: 30%;
+    margin-bottom: 3px;
+    border: 1px;
+    border-style: solid;
+    border-color: #495057;
 }
 
 .tipo-bug {
@@ -53,6 +68,11 @@
     text-transform: none;
     font-size: 11px;
     text-align: center; 
+    margin-left: 30%;
+    margin-bottom: 3px;
+    border: 1px;
+    border-style: solid;
+    border-color: #495057;
 }
 
 .tipo-normal {
@@ -67,6 +87,11 @@
     text-transform: none;
     font-size: 11px;
     text-align: center;
+    margin-left: 30%;
+    margin-bottom: 3px;
+    border: 1px;
+    border-style: solid;
+    border-color: #495057;
 }
 
 .tipo-poison {
@@ -81,6 +106,11 @@
     text-transform: none;
     font-size: 11px;
     text-align: center;
+    margin-left: 30%;
+    margin-bottom: 3px;
+    border: 1px;
+    border-style: solid;
+    border-color: #495057;
 }
 
 .tipo-electric {
@@ -95,6 +125,11 @@
     text-transform: none;
     font-size: 11px;
     text-align: center;
+    margin-left: 30%;
+    margin-bottom: 3px;
+    border: 1px;
+    border-style: solid;
+    border-color: #495057;
 }
 
 .tipo-ground {
@@ -109,6 +144,11 @@
     text-transform: none;
     font-size: 11px;
     text-align: center;
+    margin-left: 30%;
+    margin-bottom: 3px;
+    border: 1px;
+    border-style: solid;
+    border-color: #495057;
 }
 
 .tipo-fairy {
@@ -122,7 +162,12 @@
     float: left;
     text-transform: none;
     font-size: 11px;
-    text-align: center; 
+    text-align: center;
+    margin-left: 30%; 
+    margin-bottom: 3px;
+    border: 1px;
+    border-style: solid;
+    border-color: #495057;
 }
 
 .tipo-fighting {
@@ -137,6 +182,11 @@
     text-transform: none;
     font-size: 11px;
     text-align: center;
+    margin-left: 30%;
+    margin-bottom: 3px;
+    border: 1px;
+    border-style: solid;
+    border-color: #495057;
 }
 
 .tipo-psychic {
@@ -151,6 +201,11 @@
     text-transform: none;
     font-size: 11px;
     text-align: center;
+    margin-left: 30%;
+    margin-bottom: 3px;
+    border: 1px;
+    border-style: solid;
+    border-color: #495057;
 }
 
 .tipo-rock {
@@ -165,6 +220,11 @@
     text-transform: none;
     font-size: 11px;
     text-align: center;
+    margin-left: 30%;
+    margin-bottom: 3px;
+    border: 1px;
+    border-style: solid;
+    border-color: #495057;
 }
 
 .tipo-ghost {
@@ -178,7 +238,12 @@
     float: left;
     text-transform: none;
     font-size: 11px;
-    text-align: center; 
+    text-align: center;
+    margin-left: 30%;
+    margin-bottom: 3px;
+    border: 1px;
+    border-style: solid;
+    border-color: #495057; 
 }
 
 .tipo-icy {
@@ -192,7 +257,12 @@
     float: left;
     text-transform: none;
     font-size: 11px;
-    text-align: center; 
+    text-align: center;
+    margin-left: 30%; 
+    margin-bottom: 3px;
+    border: 1px;
+    border-style: solid;
+    border-color: #495057;
 }
 
 .tipo-dragon {
@@ -209,7 +279,12 @@
     float: left;
     text-transform: none;
     font-size: 11px;
-    text-align: center; 
+    text-align: center;
+    margin-left: 30%; 
+    margin-bottom: 3px;
+    border: 1px;
+    border-style: solid;
+    border-color: #495057;
 }
 
 .tipo-flying {
@@ -227,5 +302,10 @@
     float: left;
     text-transform: none;
     font-size: 11px;
-    text-align: center;  
+    text-align: center;
+    margin-left: 30%;  
+    margin-bottom: 3px;
+    border: 1px;
+    border-style: solid;
+    border-color: #495057;
 }
