--- a/styles.scss
+++ b/styles.scss
@@ -3,5 +3,5 @@
 @import "./datos-del-pokemon";
 @import "./tipo-pokemon";
 
-//Stilo para el HTML de MEW
-@import "./style-MEW"
+//Estilo para el HTML de MEW
+@import "./style-MEW";
