--- a/_cada-pokemon.scss
+++ b/_cada-pokemon.scss
@@ -1,4 +1,4 @@
-.imagen-mew {
+.imagen-cada-pokemon {
     width: 400px;
     height: 400px;
     position: absolute;
@@ -14,21 +14,21 @@
         
 }
 
-.imagen-mew:hover {
+.imagen-cada-pokemon:hover {
     //animation-play-state: paused;
     animation: sport 6s linear 0s infinite normal;
 }
 
-.body-mew {
+.body-cada-pokemon{
     background-image: url("./fondo-mew.jpg");
     background-repeat: no-repeat;
     background-size:100%;
 }
 
 
-//Componentes de la tarjeta de MEW
+//Componentes de la tarjeta de cada_pokemon
 
-.caja-mew{
+.caja-cada-pokemon{
     color: white;
     display: flex;
     flex-direction: row;
@@ -46,6 +46,6 @@
 
 
 
-.nombre-mew {
+.nombre-cada-pokemon {
     text-shadow: 0px 0px 16px black;
 }
