Completada pokedex y pokemon individual, muchas mejoras posibles

--- a/_cada-pokemon.scss
+++ b/_cada-pokemon.scss
@@ -14,10 +14,10 @@
         
 }
 
-.imagen-cada-pokemon:hover {
+/*.imagen-cada-pokemon:hover {
     //animation-play-state: paused;
     animation: sport 6s linear 0s infinite normal;
-}
+}*/
 
 .body-cada-pokemon{
     background-image: url("./fondo-mew.jpg");
